updated exports and surefire configuration